--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Akash Vijay
+logo: /assets/1655567506043.jpg
 description: ECE at UT Austin
 show_downloads: false
 theme: jekyll-theme-architect
