--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Akash Vijay
 logo: /assets/1655567506043.jpg
 description: ECE at UT Austin
 show_downloads: false
-theme: jekyll-theme-architect
+theme: jekyll-theme-minimal
