--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Akash Vijay
-logo: /assets/1655567506043.jpg
+logo: /assets/test.jpg
 description: ECE at UT Austin
 show_downloads: false
 theme: jekyll-theme-minimal
