--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Akash Vijay
 logo: /assets/test.jpg
 description: ECE at UT Austin 
+linkedin: akashxvijay
 show_downloads: false
 theme: jekyll-theme-minimal
