--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ show_downloads: false
 theme: jekyll-theme-minimal
 
 author: 
-  linkedin: akashxvijay
-  email: axvij1016@gmail.com
+  linkedin: "akashxvijay"
+  email: "axvij1016@gmail.com"
