--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Akash Vijay
 logo: /assets/test.jpg
 description: ECE at UT Austin 
+linkedin: https://www.linkedin.com/in/akashxvijay/
 
 author:
   # Biographic information
