--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Akash Vijay
 logo: /assets/test.jpg
-description: ECE at UT Austin 
-https://www.linkedin.com/in/akashxvijay/
+description: ECE at UT Austin https://www.linkedin.com/in/akashxvijay/
 
 author:
   # Biographic information
