--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Akash Vijay
 logo: /assets/test.jpg
-description: https://www.linkedin.com/in/akashxvijay/
-
+description: <a href="https://www.linkedin.com/in/akashxvijay/">Linkedin</a>
 
 show_downloads: false
 theme: jekyll-theme-minimal
