--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Akash Vijay
 logo: /assets/test.jpg
+description: ECE @ UT Austin
 description: <a href="https://www.linkedin.com/in/akashxvijay/">Linkedin</a>
 
 show_downloads: false
